--- a/Hect/Tests/SystemTests/SystemTests.vcxproj
+++ b/Hect/Tests/SystemTests/SystemTests.vcxproj
@@ -177,7 +177,7 @@
     <ClInclude Include="Source\MaterialLoadingTests.h" />
     <ClInclude Include="Source\MeshLoadingTests.h" />
     <ClInclude Include="Source\NetworkTests.h" />
-    <ClInclude Include="Source\StorageTests.h" />
+    <ClInclude Include="Source\FileSystemTests.h" />
     <ClInclude Include="Source\TaskPoolTests.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
