--- a/Hect/Tests/SystemTests/SystemTests.vcxproj.filters
+++ b/Hect/Tests/SystemTests/SystemTests.vcxproj.filters
@@ -13,13 +13,13 @@
     <ClInclude Include="Source\NetworkTests.h">
       <Filter>Source</Filter>
     </ClInclude>
-    <ClInclude Include="Source\StorageTests.h">
-      <Filter>Source</Filter>
-    </ClInclude>
     <ClInclude Include="Source\TaskPoolTests.h">
       <Filter>Source</Filter>
     </ClInclude>
     <ClInclude Include="Source\EntityTests.h">
+      <Filter>Source</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\FileSystemTests.h">
       <Filter>Source</Filter>
     </ClInclude>
   </ItemGroup>
