--- a/Hect/Hect.vcxproj
+++ b/Hect/Hect.vcxproj
@@ -48,8 +48,8 @@
     <ClCompile Include="Source\Entity\Systems\PhysicsSystem.cpp" />
     <ClCompile Include="Source\Entity\Systems\RenderingSystem.cpp" />
     <ClCompile Include="Source\Graphics\FrameBuffer.cpp" />
-    <ClCompile Include="Source\Graphics\Gpu.cpp" />
-    <ClCompile Include="Source\Graphics\GpuObject.cpp" />
+    <ClCompile Include="Source\Graphics\Renderer.cpp" />
+    <ClCompile Include="Source\Graphics\RendererObject.cpp" />
     <ClCompile Include="Source\Graphics\Image.cpp" />
     <ClCompile Include="Source\Graphics\ImageLoader.cpp" />
     <ClCompile Include="Source\Graphics\ImagePngFormat.cpp" />
@@ -78,7 +78,7 @@
     <ClCompile Include="Source\Graphics\UniformValue.cpp" />
     <ClCompile Include="Source\Graphics\VertexAttribute.cpp" />
     <ClCompile Include="Source\Graphics\VertexLayout.cpp" />
-    <ClCompile Include="Source\Input\Input.cpp" />
+    <ClCompile Include="Source\Input\InputSystem.cpp" />
     <ClCompile Include="Source\Input\InputAxis.cpp" />
     <ClCompile Include="Source\Input\Keyboard.cpp" />
     <ClCompile Include="Source\Input\Mouse.cpp" />
@@ -90,7 +90,7 @@
     <ClCompile Include="Source\IO\MemoryWriteStream.cpp" />
     <ClCompile Include="Source\IO\Path.cpp" />
     <ClCompile Include="Source\IO\ReadStream.cpp" />
-    <ClCompile Include="Source\IO\Storage.cpp" />
+    <ClCompile Include="Source\IO\FileSystem.cpp" />
     <ClCompile Include="Source\IO\WriteStream.cpp" />
     <ClCompile Include="Source\Network\IpAddress.cpp" />
     <ClCompile Include="Source\Network\Packet.cpp" />
@@ -133,8 +133,8 @@
     <ClInclude Include="Source\Entity\Systems\PhysicsSystem.h" />
     <ClInclude Include="Source\Entity\Systems\RenderingSystem.h" />
     <ClInclude Include="Source\Graphics\FrameBuffer.h" />
-    <ClInclude Include="Source\Graphics\Gpu.h" />
-    <ClInclude Include="Source\Graphics\GpuObject.h" />
+    <ClInclude Include="Source\Graphics\Renderer.h" />
+    <ClInclude Include="Source\Graphics\RendererObject.h" />
     <ClInclude Include="Source\Graphics\Image.h" />
     <ClInclude Include="Source\Graphics\ImagePngFormat.h" />
     <ClInclude Include="Source\Graphics\Material.h" />
@@ -158,7 +158,7 @@
     <ClInclude Include="Source\Graphics\VertexAttribute.h" />
     <ClInclude Include="Source\Graphics\VertexLayout.h" />
     <ClInclude Include="Source\Hect.h" />
-    <ClInclude Include="Source\Input\Input.h" />
+    <ClInclude Include="Source\Input\InputSystem.h" />
     <ClInclude Include="Source\Input\InputAxis.h" />
     <ClInclude Include="Source\Input\Keyboard.h" />
     <ClInclude Include="Source\Input\Mouse.h" />
@@ -170,7 +170,7 @@
     <ClInclude Include="Source\IO\MemoryWriteStream.h" />
     <ClInclude Include="Source\IO\Path.h" />
     <ClInclude Include="Source\IO\ReadStream.h" />
-    <ClInclude Include="Source\IO\Storage.h" />
+    <ClInclude Include="Source\IO\FileSystem.h" />
     <ClInclude Include="Source\IO\WriteStream.h" />
     <ClInclude Include="Source\Math\Angle.h" />
     <ClInclude Include="Source\Math\AxisAlignedBox.h" />
