Cleaning up after recent refactoring.

--- a/SolidBlack/SolidBlack.vcxproj
+++ b/SolidBlack/SolidBlack.vcxproj
@@ -20,16 +20,17 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\Client.cpp" />
+    <ClCompile Include="Source\DebugCameraSystem.cpp" />
     <ClCompile Include="Source\DeferredRenderingSystem.cpp" />
-    <ClCompile Include="Source\FreeCameraController.cpp" />
     <ClCompile Include="Source\Player.cpp" />
     <ClCompile Include="Source\Server.cpp" />
     <ClCompile Include="Source\TestState.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Client.h" />
+    <ClInclude Include="Source\DebugCamera.h" />
+    <ClInclude Include="Source\DebugCameraSystem.h" />
     <ClInclude Include="Source\DeferredRenderingSystem.h" />
-    <ClInclude Include="Source\FreeCameraController.h" />
     <ClInclude Include="Source\PacketType.h" />
     <ClInclude Include="Source\Player.h" />
     <ClInclude Include="Source\Server.h" />
