--- a/Hect/Hect.vcxproj
+++ b/Hect/Hect.vcxproj
@@ -76,6 +76,7 @@
     <ClCompile Include="Source\Graphics\UniformValue.cpp" />
     <ClCompile Include="Source\Graphics\VertexAttribute.cpp" />
     <ClCompile Include="Source\Graphics\VertexLayout.cpp" />
+    <ClCompile Include="Source\Input\InputAxisDataFormat.cpp" />
     <ClCompile Include="Source\Input\InputSystem.cpp" />
     <ClCompile Include="Source\Input\InputAxis.cpp" />
     <ClCompile Include="Source\Input\Keyboard.cpp" />
@@ -154,6 +155,7 @@
     <ClInclude Include="Source\Graphics\VertexAttribute.h" />
     <ClInclude Include="Source\Graphics\VertexLayout.h" />
     <ClInclude Include="Source\Hect.h" />
+    <ClInclude Include="Source\Input\InputAxisDataFormat.h" />
     <ClInclude Include="Source\Input\InputSystem.h" />
     <ClInclude Include="Source\Input\InputAxis.h" />
     <ClInclude Include="Source\Input\Keyboard.h" />
