--- a/SolidBlack/Deploy/Settings.json
+++ b/SolidBlack/Deploy/Settings.json
@@ -11,6 +11,51 @@
         "Common",
         "DeferredShading"
     ],
+    "inputAxes" :
+    {
+        "viewX" :
+        {
+            "source" : "MouseMoveX",
+            "acceleration" : 0.0025,
+            "gravity" : 10
+        },
+        "viewY" :
+        {
+            "source" : "MouseMoveY",
+            "acceleration" : 0.0025,
+            "gravity" : 10
+        },
+        "moveX" :
+        {
+            "source" : "Key",
+            "positiveKey" : "D",
+            "negativeKey" : "A",
+            "acceleration" : 4,
+            "gravity" : 10
+        },
+        "moveY" :
+        {
+            "source" : "Key",
+            "positiveKey" : "W",
+            "negativeKey" : "S",
+            "acceleration" : 4,
+            "gravity" : 10
+        },
+        "roll" :
+        {
+            "source" : "Key",
+            "positiveKey" : "E",
+            "negativeKey" : "Q",
+            "acceleration" : 4,
+            "gravity" : 10
+        },
+        "adjustSpeed" :
+        {
+            "source" : "MouseScroll",
+            "acceleration" : 4,
+            "gravity" : 1000
+        }
+    },
     "graphics" :
     {
         "compositorShader" : "Shaders/Compositor.shader",
