Improved DataValue formats.

--- a/Hect/Hect.vcxproj
+++ b/Hect/Hect.vcxproj
@@ -52,11 +52,11 @@
     <ClCompile Include="Source\Graphics\ImageLoader.cpp" />
     <ClCompile Include="Source\Graphics\ImagePngFormat.cpp" />
     <ClCompile Include="Source\Graphics\Material.cpp" />
-    <ClCompile Include="Source\Graphics\MaterialJsonFormat.cpp" />
+    <ClCompile Include="Source\Graphics\MaterialDataFormat.cpp" />
     <ClCompile Include="Source\Graphics\MaterialLoader.cpp" />
     <ClCompile Include="Source\Graphics\Mesh.cpp" />
     <ClCompile Include="Source\Graphics\MeshBuilder.cpp" />
-    <ClCompile Include="Source\Graphics\MeshJsonFormat.cpp" />
+    <ClCompile Include="Source\Graphics\MeshDataFormat.cpp" />
     <ClCompile Include="Source\Graphics\MeshLoader.cpp" />
     <ClCompile Include="Source\Graphics\Pass.cpp" />
     <ClCompile Include="Source\Graphics\PassUniformValue.cpp" />
@@ -64,13 +64,13 @@
     <ClCompile Include="Source\Graphics\RenderTarget.cpp" />
     <ClCompile Include="Source\Graphics\Window.cpp" />
     <ClCompile Include="Source\Graphics\Shader.cpp" />
-    <ClCompile Include="Source\Graphics\ShaderJsonFormat.cpp" />
+    <ClCompile Include="Source\Graphics\ShaderDataFormat.cpp" />
     <ClCompile Include="Source\Graphics\ShaderLoader.cpp" />
     <ClCompile Include="Source\Graphics\ShaderModule.cpp" />
     <ClCompile Include="Source\Graphics\ShaderModuleLoader.cpp" />
     <ClCompile Include="Source\Graphics\Technique.cpp" />
     <ClCompile Include="Source\Graphics\Texture.cpp" />
-    <ClCompile Include="Source\Graphics\TextureJsonFormat.cpp" />
+    <ClCompile Include="Source\Graphics\TextureDataFormat.cpp" />
     <ClCompile Include="Source\Graphics\TextureLoader.cpp" />
     <ClCompile Include="Source\Graphics\Uniform.cpp" />
     <ClCompile Include="Source\Graphics\UniformValue.cpp" />
@@ -84,7 +84,7 @@
     <ClCompile Include="Source\Internal\Bullet.cpp" />
     <ClCompile Include="Source\IO\FileReadStream.cpp" />
     <ClCompile Include="Source\IO\FileWriteStream.cpp" />
-    <ClCompile Include="Source\IO\JsonParser.cpp" />
+    <ClCompile Include="Source\IO\DataJsonFormat.cpp" />
     <ClCompile Include="Source\IO\MemoryReadStream.cpp" />
     <ClCompile Include="Source\IO\MemoryWriteStream.cpp" />
     <ClCompile Include="Source\IO\Path.cpp" />
@@ -135,21 +135,21 @@
     <ClInclude Include="Source\Graphics\Image.h" />
     <ClInclude Include="Source\Graphics\ImagePngFormat.h" />
     <ClInclude Include="Source\Graphics\Material.h" />
-    <ClInclude Include="Source\Graphics\MaterialJsonFormat.h" />
+    <ClInclude Include="Source\Graphics\MaterialDataFormat.h" />
     <ClInclude Include="Source\Graphics\Mesh.h" />
     <ClInclude Include="Source\Graphics\MeshBuilder.h" />
-    <ClInclude Include="Source\Graphics\MeshJsonFormat.h" />
+    <ClInclude Include="Source\Graphics\MeshDataFormat.h" />
     <ClInclude Include="Source\Graphics\Pass.h" />
     <ClInclude Include="Source\Graphics\PassUniformValue.h" />
     <ClInclude Include="Source\Graphics\RenderMode.h" />
     <ClInclude Include="Source\Graphics\RenderTarget.h" />
     <ClInclude Include="Source\Graphics\Window.h" />
     <ClInclude Include="Source\Graphics\Shader.h" />
-    <ClInclude Include="Source\Graphics\ShaderJsonFormat.h" />
+    <ClInclude Include="Source\Graphics\ShaderDataFormat.h" />
     <ClInclude Include="Source\Graphics\ShaderModule.h" />
     <ClInclude Include="Source\Graphics\Technique.h" />
     <ClInclude Include="Source\Graphics\Texture.h" />
-    <ClInclude Include="Source\Graphics\TextureJsonFormat.h" />
+    <ClInclude Include="Source\Graphics\TextureDataFormat.h" />
     <ClInclude Include="Source\Graphics\Uniform.h" />
     <ClInclude Include="Source\Graphics\UniformValue.h" />
     <ClInclude Include="Source\Graphics\VertexAttribute.h" />
@@ -163,7 +163,7 @@
     <ClInclude Include="Source\Internal\Bullet.h" />
     <ClInclude Include="Source\IO\FileReadStream.h" />
     <ClInclude Include="Source\IO\FileWriteStream.h" />
-    <ClInclude Include="Source\IO\JsonParser.h" />
+    <ClInclude Include="Source\IO\DataJsonFormat.h" />
     <ClInclude Include="Source\IO\MemoryReadStream.h" />
     <ClInclude Include="Source\IO\MemoryWriteStream.h" />
     <ClInclude Include="Source\IO\Path.h" />
