--- a/Hect/Tests/UnitTests/UnitTests.vcxproj
+++ b/Hect/Tests/UnitTests/UnitTests.vcxproj
@@ -174,6 +174,7 @@
     <ClInclude Include="Source\PathTests.h" />
     <ClInclude Include="Source\PlaneTests.h" />
     <ClInclude Include="Source\QuaternionTests.h" />
+    <ClInclude Include="Source\StateFlowTests.h" />
     <ClInclude Include="Source\TaskPoolTests.h" />
     <ClInclude Include="Source\TimeSpanTests.h" />
     <ClInclude Include="Source\FormatTests.h" />
