--- a/Hect/Tests/UnitTests/UnitTests.vcxproj.filters
+++ b/Hect/Tests/UnitTests/UnitTests.vcxproj.filters
@@ -79,6 +79,9 @@
     <ClInclude Include="Source\MaterialDataFormatTests.h">
       <Filter>Source</Filter>
     </ClInclude>
+    <ClInclude Include="Source\StateFlowTests.h">
+      <Filter>Source</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Source">
