--- a/Hect/Hect.vcxproj.filters
+++ b/Hect/Hect.vcxproj.filters
@@ -117,9 +117,6 @@
     <ClCompile Include="Source\Entity\Entity.cpp">
       <Filter>Source\Entity</Filter>
     </ClCompile>
-    <ClCompile Include="Source\Entity\EntityAttributes.cpp">
-      <Filter>Source\Entity</Filter>
-    </ClCompile>
     <ClCompile Include="Source\Entity\Scene.cpp">
       <Filter>Source\Entity</Filter>
     </ClCompile>
@@ -306,6 +303,9 @@
     <ClCompile Include="Source\Entity\Components\AmbientLight.cpp">
       <Filter>Source\Entity\Components</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Entity\EntityData.cpp">
+      <Filter>Source\Entity</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Asset\AssetCache.h">
@@ -369,9 +369,6 @@
       <Filter>Source\Entity\Systems</Filter>
     </ClInclude>
     <ClInclude Include="Source\Entity\Entity.h">
-      <Filter>Source\Entity</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\Entity\EntityAttributes.h">
       <Filter>Source\Entity</Filter>
     </ClInclude>
     <ClInclude Include="Source\Entity\Scene.h">
@@ -577,6 +574,9 @@
     </ClInclude>
     <ClInclude Include="Source\Entity\Components\AmbientLight.h">
       <Filter>Source\Entity\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Entity\EntityData.h">
+      <Filter>Source\Entity</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
