--- a/SolidBlack/SolidBlack.vcxproj.filters
+++ b/SolidBlack/SolidBlack.vcxproj.filters
@@ -6,51 +6,66 @@
       <Extensions>
       </Extensions>
     </Filter>
+    <Filter Include="Source\Network">
+      <UniqueIdentifier>{b9f13d7f-dab6-44b4-8f80-cbdf7ec30f02}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source\Components">
+      <UniqueIdentifier>{ec29ec9d-4c23-4b0b-86e0-e14b03642b24}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source\Systems">
+      <UniqueIdentifier>{df1c6677-cf47-47d5-a80a-a84dfd9a6941}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source\States">
+      <UniqueIdentifier>{a573acc7-6e9e-4a6f-b028-58ce860e8f6e}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Source\Client.cpp">
-      <Filter>Source</Filter>
+    <ClCompile Include="Source\Network\Client.cpp">
+      <Filter>Source\Network</Filter>
     </ClCompile>
-    <ClCompile Include="Source\Player.cpp">
-      <Filter>Source</Filter>
+    <ClCompile Include="Source\Network\Player.cpp">
+      <Filter>Source\Network</Filter>
     </ClCompile>
-    <ClCompile Include="Source\Server.cpp">
-      <Filter>Source</Filter>
+    <ClCompile Include="Source\Network\Server.cpp">
+      <Filter>Source\Network</Filter>
     </ClCompile>
-    <ClCompile Include="Source\TestState.cpp">
-      <Filter>Source</Filter>
+    <ClCompile Include="Source\States\TestState.cpp">
+      <Filter>Source\States</Filter>
     </ClCompile>
-    <ClCompile Include="Source\DebugCameraSystem.cpp">
-      <Filter>Source</Filter>
+    <ClCompile Include="Source\Systems\DebugCameraSystem.cpp">
+      <Filter>Source\Systems</Filter>
     </ClCompile>
-    <ClCompile Include="Source\RenderingSystem.cpp">
-      <Filter>Source</Filter>
+    <ClCompile Include="Source\Systems\RenderingSystem.cpp">
+      <Filter>Source\Systems</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Source\Client.h">
+    <ClInclude Include="Source\SolidBlack.h">
       <Filter>Source</Filter>
     </ClInclude>
-    <ClInclude Include="Source\PacketType.h">
-      <Filter>Source</Filter>
+    <ClInclude Include="Source\Network\Client.h">
+      <Filter>Source\Network</Filter>
     </ClInclude>
-    <ClInclude Include="Source\Player.h">
-      <Filter>Source</Filter>
+    <ClInclude Include="Source\Network\PacketType.h">
+      <Filter>Source\Network</Filter>
     </ClInclude>
-    <ClInclude Include="Source\Server.h">
-      <Filter>Source</Filter>
+    <ClInclude Include="Source\Network\Player.h">
+      <Filter>Source\Network</Filter>
     </ClInclude>
-    <ClInclude Include="Source\TestState.h">
-      <Filter>Source</Filter>
+    <ClInclude Include="Source\Network\Server.h">
+      <Filter>Source\Network</Filter>
     </ClInclude>
-    <ClInclude Include="Source\DebugCamera.h">
-      <Filter>Source</Filter>
+    <ClInclude Include="Source\Components\DebugCamera.h">
+      <Filter>Source\Components</Filter>
     </ClInclude>
-    <ClInclude Include="Source\DebugCameraSystem.h">
-      <Filter>Source</Filter>
+    <ClInclude Include="Source\States\TestState.h">
+      <Filter>Source\States</Filter>
     </ClInclude>
-    <ClInclude Include="Source\RenderingSystem.h">
-      <Filter>Source</Filter>
+    <ClInclude Include="Source\Systems\DebugCameraSystem.h">
+      <Filter>Source\Systems</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Systems\RenderingSystem.h">
+      <Filter>Source\Systems</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
