--- a/Hect/Hect.vcxproj
+++ b/Hect/Hect.vcxproj
@@ -32,12 +32,14 @@
     <ClCompile Include="Source\Core\TaskPool.cpp" />
     <ClCompile Include="Source\Core\Timer.cpp" />
     <ClCompile Include="Source\Core\TimeSpan.cpp" />
+    <ClCompile Include="Source\Entity\ComponentReader.cpp" />
     <ClCompile Include="Source\Entity\Components\AmbientLight.cpp" />
     <ClCompile Include="Source\Entity\Components\Camera.cpp" />
     <ClCompile Include="Source\Entity\Components\DirectionalLight.cpp" />
     <ClCompile Include="Source\Entity\Components\Geometry.cpp" />
     <ClCompile Include="Source\Entity\Components\RigidBody.cpp" />
     <ClCompile Include="Source\Entity\Components\Transform.cpp" />
+    <ClCompile Include="Source\Entity\ComponentWriter.cpp" />
     <ClCompile Include="Source\Entity\Entity.cpp" />
     <ClCompile Include="Source\Entity\EntityData.cpp" />
     <ClCompile Include="Source\Entity\Component.cpp" />
@@ -117,12 +119,14 @@
     <ClInclude Include="Source\Core\Timer.h" />
     <ClInclude Include="Source\Core\TimeSpan.h" />
     <ClInclude Include="Source\Core\Uncopyable.h" />
+    <ClInclude Include="Source\Entity\ComponentReader.h" />
     <ClInclude Include="Source\Entity\Components\AmbientLight.h" />
     <ClInclude Include="Source\Entity\Components\Camera.h" />
     <ClInclude Include="Source\Entity\Components\DirectionalLight.h" />
     <ClInclude Include="Source\Entity\Components\Geometry.h" />
     <ClInclude Include="Source\Entity\Components\RigidBody.h" />
     <ClInclude Include="Source\Entity\Components\Transform.h" />
+    <ClInclude Include="Source\Entity\ComponentWriter.h" />
     <ClInclude Include="Source\Entity\Entity.h" />
     <ClInclude Include="Source\Entity\EntityData.h" />
     <ClInclude Include="Source\Entity\Component.h" />
